# sat-memory-allocator-win32

./: .gitignore  CMakeLists.txt  cmake-2019-x64.bat  cmake-VS2019-x64.bat  cmake-install-2012.bat  package-lock.json  package.json  todo.md
.tools/: cli.js  index.cmake  utils.cmake
.tools/certificate/: build-certificate.pfx  make-test-certificate.ps1
.tools/nodejs/: NodeJS.cmake  index.cmake  make_build.js  make_package_json.js
.tools/packaging/: copy-file.js  copy-sign-file.js  index.cmake  pack-directory.js
.tools/projects/: sources.cmake  targets.cmake
lib/: CMakeLists.txt
lib/common/: alignment.h  bitwise.h
lib/sat-allocator/: CMakeLists.txt
lib/sat-allocator/include/sat/: allocator.h  objects_infos.h  objects_types.h
lib/sat-allocator/src/: base.cpp
lib/sat-allocator/src/allocators/Buddy/: heapGlobal.h  heapLocal_sub_object.h
lib/sat-allocator/src/allocators/LargeObject/: LargeObjectAllocator.cpp  index.h
lib/sat-allocator/src/allocators/ZonedBuddy/: Global.h  Global_objects.h  Global_zoned_objects.h  Local.cpp  Local.h  Local_objects.h  Local_sub_objects.h  Local_zoned_objects.h  ZonedBuddyAllocator.cpp  index.h  utils.h
lib/sat-allocator/src/heaps/: AllocatorSizeMapping.h  heaps.cpp  heaps.h
lib/sat-allocator/src/types/: Types_database.cpp  Types_database.hpp
lib/sat-allocator/src/win32/: patch_functions.cc
lib/sat-allocator/src/win32/patcher/: mini_disassembler_types.h  preamble_patcher.cc  preamble_patcher.h
lib/sat-allocator/test/: CMakeLists.txt  main.cpp  test_btree.cpp  test_meta_alloc.cpp  test_perf_alloc.cpp  test_perf_alloc.h  test_types_alloc.cpp  utils.h
lib/sat-memory/: CMakeLists.txt
lib/sat-memory/include/sat/: memory.hpp
lib/sat-memory/include/sat-memory/: memory.hpp  table.hpp
lib/sat-memory/src/: base.cpp  memory-buffers64.cpp  memory-buffers64.hpp  segments-allocator.hpp
lib/sat-memory/src/utils/: alignment.h  bitwise.h
lib/sat-memory/test/: CMakeLists.txt  main.cpp
lib/sat-stack-analysis/: CMakeLists.txt
lib/sat-stack-analysis/include/sat/: stack_analysis.h
lib/sat-stack-analysis/src/: base.cpp  scheduler.cpp  scheduler.h  stack-profiler.cpp  stack-profiler.h  stack-stamp.cpp  stack-stamp.h  thread-stack-tracker.cpp  thread-stack-tracker.h
lib/sat-stack-analysis/src/win32/: system.cpp  system.h
lib/sat-stack-analysis/test/: test_stack_analysis.cpp
lib/sat-threads/: CMakeLists.txt
lib/sat-threads/include/sat/: timing.hpp  worker.hpp
lib/sat-threads/include/sat-threads/: thread.hpp
lib/sat-threads/src/: spinlock.cpp  threads.hpp  timing.cpp
lib/sat-threads/src/worker/: WorkContexts.cpp  Workloads.cpp  index.hpp
lib/sat-threads/test/: CMakeLists.txt  main.cpp
lib/shared/: main.cpp
libsat/: CMakeLists.txt  main.cpp
sat-allocator/: CMakeLists.txt
sat-allocator/include/sat-memory-allocator/: _base.h  _objects.h  _types.h  allocator.h  objects_infos.h  sat-memory-allocator.h
sat-allocator/src/: base.cpp  controller.cpp  controller.h  table.h
sat-allocator/src/allocators/Buddy/: heapLocal.h  heapLocal_plain_object.h  index.cpp  index.h
sat-allocator/src/allocators/LargeObject/: LargeObjectAllocator.cpp  index.h
sat-allocator/src/allocators/ZonedBuddy/: Global.cpp  Global_sub_objects.h  index.h  utils.h
sat-allocator/src/heaps/: AllocatorSizeMapping.h  heaps.cpp  heaps.h
sat-allocator/src/heaps/Compact/: heapCompact.cpp
sat-allocator/src/types/: Types_database.hpp
sat-allocator/src/utils/: binary-arithmetic.h  index.h
sat-allocator/src/win32/: patch_functions.cc
sat-allocator/src/win32/patcher/: mini_disassembler.h
sat-allocator/test/: CMakeLists.txt  main.cpp  test_meta_alloc.cpp  test_perf_alloc.cpp  test_perf_alloc.h  test_types_alloc.cpp  utils.cpp  utils.h
sat-memory/: CMakeLists.txt
sat-memory/include/sat-memory/: table.hpp
sat-memory/src/: base.cpp  memory-buffers64.cpp  memory-buffers64.hpp  segments-allocator.cpp
sat-memory/src/utils/: binary-arithmetic.h  btree.h
sat-memory/src/win32/: system.cpp  system.h
sat-memory/test/: CMakeLists.txt  main.cpp
sat-stack-analysis/: CMakeLists.txt
sat-stack-analysis/include/sat-memory-allocator/: stack_analysis.h
sat-stack-analysis/src/: base.cpp  scheduler.h  stack-profiler.cpp  stack-profiler.h  stack-stamp.cpp  stack-stamp.h  thread-stack-tracker.cpp  thread-stack-tracker.h
sat-stack-analysis/src/win32/: llcode.x64.asm
sat-stack-analysis/test/: CMakeLists.txt  main.cpp  test_stack_analysis.cpp
sat-threads/: CMakeLists.txt
sat-threads/include/sat-threads/: shared.hpp  spinlock.hpp  thread.hpp  timing.hpp
sat-threads/src/: spinlock.cpp  threads.cpp  threads.hpp  timing.cpp
sat-threads/src/worker/: WorkPool.cpp  index.hpp
sat-threads/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  test_meta_alloc.cpp  test_perf_alloc.cpp  test_perf_alloc.h  test_stack_analysis.cpp  test_types_alloc.cpp  utils.h
