
# Add projects
add_subdirectory("./sat-memory")
add_subdirectory("./sat-allocator")
add_subdirectory("./sat-stack-analysis")
add_subdirectory("./sat-threads")
add_subdirectory("./shared")

# Add tests projects
add_subdirectory("./sat-memory/test")
add_subdirectory("./sat-allocator/test")
add_subdirectory("./sat-stack-analysis/test")
add_subdirectory("./sat-threads/test")
